Moved files to separate packages for better navigation. added methods to services